[package]
name = "sample_proj"
version = "0.1.0"
authors = ["ringo-apo <ringo1625@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
actix-rt = "1"
